# CSudokuLib

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
SudokuCLI/: .gitignore  SudokuCLI.vcxproj  SudokuCLI.vcxproj.filters
SudokuCLI/src/: GenerationInterface.cpp  GenerationInterface.h  GradeInterface.cpp  GradeInterface.h  Main.cpp  ParseCLI.cpp  ParseCLI.h  SolveInterface.cpp  SolveInterface.h
SudokuLib/: ReadMe.txt  SudokuLib.vcxproj  SudokuLib.vcxproj.filters
SudokuLib/src/: BitCount.cpp  BitCount.h  Board.cpp  Board.h  BoardAbstract.cpp  BoardAbstract.h  HiddenSingle.cpp  HiddenSingle.h  MinimizeBoard.cpp  MinimizeBoard.h  MinimizeMethod.cpp  MinimizeMethod.h  NakedPair.cpp  NakedPair.h  NakedSingle.cpp  NakedSingle.h  NakedTriple.cpp  NakedTriple.h  NotchedBoard.cpp  NotchedBoard.h  PuzzleDimensions.h  PuzzleFactory.cpp  PuzzleFactory.h  PuzzleIndexing.h  QuickSolve.cpp  QuickSolve.h  ScrambleSolve.cpp  ScrambleSolve.h  SolveMethod.h  Sudoku.h  SudokuBoard.cpp  SudokuBoard.h  SudokuEngine.cpp  SudokuEngine.h  SudokuGrader.cpp  SudokuGrader.h  SudokuPrerequisites.h  SudokuTechnique.h  TechniqueConstants.cpp  Timer.cpp  (+6 more)
SudokuLib/src/MinimizeMethods/: MinCorners.cpp  MinCorners.h  MinDefault.cpp  MinDefault.h  MinDiagonal.cpp  MinDiagonal.h  MinHorizontal.cpp  MinHorizontal.h  MinVertical.cpp  MinVertical.h
SudokuLib/src/Techniques/: HiddenPair.cpp  HiddenPair.h  (+20 more)
interface/: CMakeLists.txt
interface/src/: ArgParser.h  FormatOptions.h  Main.cpp  StringUtils.h
tests/unit_tests/: CMakeLists.txt  Generator.cpp  QuickSolve.cpp  Solvers.cpp  Util.cpp
